Fix rendering of search button in Firefox
The height is too small for Firefox so that the search button is not
fully rendered and the lower part is cut off. Increasing the height
would lead to bad rendering in other browsers, but if the height is
not set it looks right in all browsers

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/gerrit.css
@@ -309,7 +309,6 @@ a:hover {
   border: 2px solid;
   color: #FFF;
   border-color: rgba(0, 0, 0, 0.15);
-  height: 14px;
   background-color: #53A93F;
   -webkit-border-radius: 2px;
   -webkit-box-sizing: content-box;
